# Embedded-Linux-Foundation_Valeo.Sprints_Tasks

./: README.md
0x00-shell-scripts/: .02_task.sh.swp  01_task.sh  02_Directory_Backup.sh  03_WIFI_Networks.sh
0x01-Embedded_Linux_App_Dev/Task1(generate a cross-compilation toolchain for RPI 4)/: pakges_instaling.txt
0x01-Embedded_Linux_App_Dev/Task1(generate a cross-compilation toolchain for RPI 4)/Test_Code/: test_cross_toolchainBuild  test_cross_toolchainBuild.cpp
0x01-Embedded_Linux_App_Dev/Task2(Creating a static and shared library)/: github_repo_link.txt
0x01-Embedded_Linux_App_Dev/Task2(Creating a static and shared library)/Creating_static&shated_lib/: README.md
0x01-Embedded_Linux_App_Dev/Task2(Creating a static and shared library)/Creating_static&shated_lib/Shared_lib/: math_lib.cpp  math_lib.hpp
0x01-Embedded_Linux_App_Dev/Task2(Creating a static and shared library)/Creating_static&shated_lib/Static_lib/: STD_TYPES.hpp  main.cpp
0x01-Embedded_Linux_App_Dev/Task3(Creating a make file to build a project)/: README.md
0x01-Embedded_Linux_App_Dev/Task3(Creating a make file to build a project)/Creating_makefile_Task/: Makefile  main.cpp
0x01-Embedded_Linux_App_Dev/Task4(Creating a CMake Based project)/: Guide Steps.md  README.md
0x01-Embedded_Linux_App_Dev/Task4(Creating a CMake Based project)/project_dir/: CMakeLists.txt
0x01-Embedded_Linux_App_Dev/Task4(Creating a CMake Based project)/project_dir/include/: Print.h  WriteInFile.h
0x01-Embedded_Linux_App_Dev/Task4(Creating a CMake Based project)/project_dir/src/: CMakeLists.txt  Print.cpp  main.cpp
0x01-Embedded_Linux_App_Dev/Task5(Implement a multi-function command)/fhCommand_dir/: CMakeLists.txt  README.md
0x01-Embedded_Linux_App_Dev/Task5(Implement a multi-function command)/fhCommand_dir/Result/: DefaultFile  PipeChannel
0x01-Embedded_Linux_App_Dev/Task5(Implement a multi-function command)/fhCommand_dir/Result/GTest_Dir_Run/: READ_FILE
0x01-Embedded_Linux_App_Dev/Task5(Implement a multi-function command)/fhCommand_dir/logger/: CMakeLists.txt  logger.cpp  logger.h
0x01-Embedded_Linux_App_Dev/Task5(Implement a multi-function command)/fhCommand_dir/src/Requester/: CMakeLists.txt  README.md  Requester  Requester.cpp  Requester.h  SrcRequester.cpp
0x01-Embedded_Linux_App_Dev/Task5(Implement a multi-function command)/fhCommand_dir/src/fh/: CMakeLists.txt  FileHandler  FileHandler.cpp  FileHandler.h  README.md  SrcFileHandler.cpp
0x01-Embedded_Linux_App_Dev/Task5(Implement a multi-function command)/fhCommand_dir/tests/: CMakeLists.txt  FileHandlerTest.cpp  README.md  RequesterTest.cpp
0x02-Final_project/Multi_ServicesApp/: CMakeLists.txt  README.md
0x02-Final_project/Multi_ServicesApp/Boost_Logger/: Logger.cpp  Logger.h
0x02-Final_project/Multi_ServicesApp/Daemon/: CMakeLists.txt  README.md  daemon.cpp  daemon.h
0x02-Final_project/Multi_ServicesApp/IPC_LIBRARY/: CMakeLists.txt  IPC_Library.cpp  IPC_Library.h  README.md
0x02-Final_project/Multi_ServicesApp/JSON/: Logger_config.json
0x02-Final_project/Multi_ServicesApp/LoggerClient/: README.md  Socket_Client  Socket_Client.cpp  Socket_Client.h
0x02-Final_project/Multi_ServicesApp/Main_Service/: CMakeLists.txt  Logger_Daemon.cpp  README.md
0x02-Final_project/Multi_ServicesApp/Mathematical_Operation_App/: CMakeLists.txt  MathApp.cpp  MathApp.h  MathAppManual.txt  README.md
0x02-Final_project/Multi_ServicesApp/Socket/: CMakeLists.txt  README.md  Socket_Server.cpp  Socket_Server.h
0x02-Final_project/Multi_ServicesApp/SysD/: LoggerDaemon.service
0x02-Final_project/Multi_ServicesApp/Utils/: CMakeLists.txt  README.md  Utils.cpp  Utils.h
0x02-Final_project/Multi_ServicesApp/build_rpi4/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
0x02-Final_project/Multi_ServicesApp/build_rpi4/Daemon/: Makefile  cmake_install.cmake
0x02-Final_project/Multi_ServicesApp/build_rpi4/IPC_LIBRARY/: Makefile  cmake_install.cmake
0x02-Final_project/Multi_ServicesApp/build_rpi4/Main_Service/: Main_Service  Makefile  cmake_install.cmake
0x02-Final_project/Multi_ServicesApp/build_rpi4/Mathematical_Operation_App/: Makefile  Math_App  cmake_install.cmake
0x02-Final_project/Multi_ServicesApp/build_rpi4/Socket/: Makefile  cmake_install.cmake
0x02-Final_project/Multi_ServicesApp/build_rpi4/Utils/: Makefile  cmake_install.cmake
